2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* epa.texi (Quick start): Use the command `epa-enable' instead of
	loading `epa-setup'.

2008-02-08  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add epa.
	($(infodir)/epa, epa.dvi): New targets.

2008-02-08  Daiki Ueno  <ueno@unixuser.org>

	* Makefile.in: Add rules to build EasyPG Assistant User's Manual.

	* epa.texi: New manual documenting the EasyPG Assistant.

2008-02-06  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (all): Wrap Lisp code examples with @lisp ... @end lisp.
	(Inspection): New function dbus-ping.

2008-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Add `shell-command'.

2008-01-28  Michael Sperber  <sperber@deinprogramm.de>

	* gnus.texi (Mail Source Specifiers): Document `group' specifier.
	(Group Parameters): Document `mail-source' parameter.

2008-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): The hostname of the su(do)? methods
	must be a local host.

2008-01-26  Michael Olson  <mwolson@gnu.org>

	* erc.texi: Update version for ERC 5.3 release.
	(Obtaining ERC): Update extras URLs for 5.3.
	(Development): Write instructions for git, and remove those for Arch.
	(History): Mention the switch to git.

2008-01-24  Karl Berry  <karl@gnu.org>

	* info.texi (Search Index, Search Text): Mention the command
	character in the section name, a la the (Go to node) node.

2008-01-21  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Errors and Events): New macro dbus-ignore-errors.

2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-news.texi: Mention gnus-article-describe-bindings.

2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-news.texi: Mention gnus-article-wide-reply-with-original.

2008-01-18  Carsten Dominik  <dominik@science.uva.nl>

	* org.texi (Property inheritance): New section.
	(Conventions): New section.